radv: weird dEQP-GLES31.functional.blend_equation_advanced.msaa.* failures if DRLR is enabled with RADV
https://gitlab.freedesktop.org/mesa/mesa/-/pipelines/1170787 for reference
Looks like Zink switches to dynamic rendering if DRLR is enabled but it doesn't set any attachment locations and those tests can randomly fail on some GPUs.
Needs to be investigated.